--- a/actions/release/changelog-conventional-commit/src/templates/report.md.j2
+++ b/actions/release/changelog-conventional-commit/src/templates/report.md.j2
@@ -29,72 +29,117 @@
 
 {% if commits.get("feat") %}
 ## ✨ Features
+{% if commits["feat"].get("(no scope)") %}
+{{ render_items(commits["feat"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["feat"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("fix") %}
 ## 🐛 Fixes
+{% if commits["fix"].get("(no scope)") %}
+{{ render_items(commits["fix"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["fix"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("docs") %}
 ## 📖 Documentation
+{% if commits["docs"].get("(no scope)") %}
+{{ render_items(commits["docs"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["docs"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("style") %}
 ## 🎨 Style
+{% if commits["style"].get("(no scope)") %}
+{{ render_items(commits["style"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["style"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("refactor") %}
 ## ♻️ Refactor
+{% if commits["refactor"].get("(no scope)") %}
+{{ render_items(commits["refactor"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["refactor"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("perf") %}
 ## ⚡ Performance
+{% if commits["perf"].get("(no scope)") %}
+{{ render_items(commits["perf"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["perf"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("test") %}
 ## ✅ Tests
+{% if commits["test"].get("(no scope)") %}
+{{ render_items(commits["test"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["test"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("chore") %}
 ## 🛠 Chores
+{% if commits["chore"].get("(no scope)") %}
+{{ render_items(commits["chore"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["chore"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
 {% if commits.get("other") %}
 ## 🔖 Other
+{% if commits["other"].get("(no scope)") %}
+{{ render_items(commits["other"]["(no scope)"], squash) }}
+{% endif %}
 {% for scope, items in commits["other"].items() %}
+{% if scope != "(no scope)" %}
 ### {{ scope }}
 {{ render_items(items, squash) }}
+{% endif %}
 {% endfor %}
 {% endif %}
